Fix typeface spacing

--- a/app/assets/stylesheets/app/typography.scss
+++ b/app/assets/stylesheets/app/typography.scss
@@ -1,5 +1,6 @@
 a { /* "links" */
   text-decoration: none;
+  letter-spacing: -0.6px;
 }
 
 a:hover {
